--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <header></header>
+    <main class="container">
+      <section class="filterSection">
+        <h2>Où vas-tu manger ce midi?</h2>
+        <p>
+          Notre site web répertorie les restaurants que tu pourras retrouver
+          autours du campus chaque midi!
+        </p>
+        <ul class="filterList">
+          <li><button class="filterBtn" id="veggieBtn">Végétarien</button></li>
+          <li><button class="filterBtn" id="asianBtn">Asiatique</button></li>
+          <li><button class="filterBtn" id="burgerBtn">Burger</button></li>
+          <li><button class="filterBtn" id="halalBtn">Halal</button></li>
+        </ul>
+        <button class="resetBtn">Retirer les filtres</button>
+      </section>
+      <section class="restaurantsSection">
+        <ul class="restaurantsContainer"></ul>
+      </section>
+    </main>
+    <footer></footer>
     <script src="scripts/restaurants.js"></script>
     <script src="scripts/script.js"></script>
   </body>
