added CSS to the restaurant container

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wild Eats</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
+  <title>Wild Eats</title>
   <body>
     <header></header>
     <main class="container">
@@ -22,7 +28,7 @@
           <li><button class="filterBtn" id="burgerBtn">Burger</button></li>
           <li><button class="filterBtn" id="halalBtn">Halal</button></li>
         </ul>
-        <button class="resetBtn">Retirer les filtres</button>
+        <button class="resetBtn">&times; Retirer les filtres</button>
       </section>
       <section class="restaurantsSection">
         <ul class="restaurantsContainer"></ul>
