--- a/index.html
+++ b/index.html
@@ -1,14 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wild Eats</title>
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
-    <script src="scripts/restaurants.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wild Eats</title>
+  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body>
+
+  <nav></nav>
+  <header class="banner">
+    <div class="menu-burger" id="menu-burger">
+    </div>
+    <nav>
+      <ul class="menu" id="menu">
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+
+      </ul>
+    </nav>
+    <h1>Wild Eats</h1>
+
+
+  </header>
+  <main>
+    <div class="block"></div>
+    <div class="block"></div>
+    <div class="block"></div>
+
+  </main>
+
+
+  <footer class=footerClass>
+
+    <div>
+      <a href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr" target="_blank">
+        <img src="image/linkedin-3000959_640.png" alt="LinkedIn" />
+      </a>
+    </div>
+
+    <div>
+      <a href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR" target="_blank">
+        <img src="image/facebook-3000954_640.png" alt="Facebook" />
+      </a>
+    </div>
+
+    <div>
+      <a href="https://www.instagram.com/wildcodeschoolofficial/" target="_blank">
+        <img src="image/instagram-1581266_640.jpg" alt="Instagram" />
+      </a>
+    </div>
+    <p>Copyright 2025 - Wild Eats</p>
+
+  </footer>
+  <script src="scripts/restaurants.js"></script>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
