few fixes and added a restaurant counter

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <title>Wild Eats</title>
   </head>
-  <title>Wild Eats</title>
   <body>
     <header></header>
     <main class="container">
@@ -31,6 +31,7 @@
         <button class="resetBtn">&times; Retirer les filtres</button>
       </section>
       <section class="restaurantsSection">
+        <h3>Restaurants disponibles : <span class="nbRestaurants"></span></h3>
         <ul class="restaurantsContainer"></ul>
       </section>
     </main>
