--- a/index.html
+++ b/index.html
@@ -11,49 +11,55 @@
 
 <body>
 
-  <nav></nav>
-  <header class="banner">
-    <div class="menu-burger" id="menu-burger">
-    </div>
-    <nav>
-      <ul class="menu" id="menu">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+  <nav class="navBar" id="navBar">
 
-      </ul>
-    </nav>
+    <ul class="menu-burger" id="menu-burger">
+      <li><a href="#">Tarifs</a></li>
+      <li><a href="#">Connexion</a></li>
+      <li><a href="#">Votre compte</a></li>
+    </ul>
+
+  </nav>
+
+  <header class="banner">
+
     <h1>Wild Eats</h1>
 
 
   </header>
+
   <main>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
+
 
   </main>
 
 
   <footer class=footerClass>
+    <ul>
 
-    <div>
-      <a href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr" target="_blank">
-        <img src="image/linkedin-3000959_640.png" alt="LinkedIn" />
-      </a>
-    </div>
+      <li>
+        <a href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr" target="_blank">
+          <img src="image/linkedin-3000959_640.png" alt="LinkedIn" />
+        </a>
+      </li>
 
-    <div>
-      <a href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR" target="_blank">
-        <img src="image/facebook-3000954_640.png" alt="Facebook" />
-      </a>
-    </div>
 
-    <div>
-      <a href="https://www.instagram.com/wildcodeschoolofficial/" target="_blank">
-        <img src="image/instagram-1581266_640.jpg" alt="Instagram" />
-      </a>
-    </div>
+      <li>
+        <a href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR"
+          target="_blank">
+          <img src="image/facebook-3000954_640.png" alt="Facebook" />
+        </a>
+      </li>
+
+
+      <li>
+        <a href="https://www.instagram.com/wildcodeschoolofficial/" target="_blank">
+          <img src="image/instagram-1581266_640.jpg" alt="Instagram" />
+        </a>
+      </li>
+
+    </ul>
+
     <p>Copyright 2025 - Wild Eats</p>
 
   </footer>
