--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <link rel="stylesheet" href="styles/style.css" />
     <title>Wild Eats</title>
   </head>
-<body>
-<nav class="navBar" id="navBar">
-     <ul class="menu-burger" id="menu-burger">
-      <li><a href="#">Tarifs</a></li>
-      <li><a href="#">Connexion</a></li>
-      <li><a href="#">Votre compte</a></li>
-    </ul>
- </nav>
-  <header class="banner">
-    <h1>Wild Eats</h1>
-  </header>
-<main class="container">
+  <body>
+    <nav class="navBar" id="navBar">
+      <ul class="menu-burger" id="menu-burger">
+        <li><a href="#">Tarifs</a></li>
+        <li><a href="#">Connexion</a></li>
+        <li><a href="#">Votre compte</a></li>
+      </ul>
+    </nav>
+    <header class="banner">
+      <h1>Wild Eats</h1>
+    </header>
+    <main class="container">
       <section class="filterSection">
         <h2>Où vas-tu manger ce midi?</h2>
         <p>
@@ -43,29 +43,37 @@
         <h3>Restaurants disponibles : <span class="nbRestaurants"></span></h3>
         <ul class="restaurantsContainer"></ul>
       </section>
- </main>
- <footer class=footerClass>
-    <ul>
-      <li>
-        <a href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr" target="_blank">
-          <img src="image/linkedin-3000959_640.png" alt="LinkedIn" />
-        </a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR"
-          target="_blank">
-          <img src="image/facebook-3000954_640.png" alt="Facebook" />
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/wildcodeschoolofficial/" target="_blank">
-          <img src="image/instagram-1581266_640.jpg" alt="Instagram" />
-        </a>
-      </li>
-    </ul>
-    <p>Copyright 2025 - Wild Eats</p>
-  </footer>
-  <script src="scripts/restaurants.js"></script>
-  <script src="scripts/script.js"></script>
-</body>
+    </main>
+    <footer class="footerClass">
+      <ul>
+        <li>
+          <a
+            href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr"
+            target="_blank"
+          >
+            <img src="img/linkedin-3000959_640.png" alt="LinkedIn" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR"
+            target="_blank"
+          >
+            <img src="img/facebook-3000954_640.png" alt="Facebook" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/wildcodeschoolofficial/"
+            target="_blank"
+          >
+            <img src="img/instagram-1581266_640.jpg" alt="Instagram" />
+          </a>
+        </li>
+      </ul>
+      <p>Copyright 2025 - Wild Eats</p>
+    </footer>
+    <script src="scripts/restaurants.js"></script>
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
