--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           />
         </button>
         <ul class="menu-burger" id="menu-burger">
-          <li><a href="#">Tarifs</a></li>
+          <li><a href="#">Forum</a></li>
           <li><a href="#">Connexion</a></li>
           <li><a href="#">Votre compte</a></li>
         </ul>
