refactored JS and modified the reset button

--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
           autours du campus chaque midi!
         </p>
         <ul class="filterList">
-          <li><button class="filterBtn" id="veggieBtn">Végétarien</button></li>
-          <li><button class="filterBtn" id="asianBtn">Asiatique</button></li>
+          <li>
+            <button class="filterBtn resetBtn">Tous restaurants</button>
+          </li>
+          <li>
+            <button class="filterBtn" id="végétarienBtn">Végétarien</button>
+          </li>
+          <li>
+            <button class="filterBtn" id="asiatiqueBtn">Asiatique</button>
+          </li>
           <li><button class="filterBtn" id="burgerBtn">Burger</button></li>
           <li><button class="filterBtn" id="halalBtn">Halal</button></li>
         </ul>
-        <button class="resetBtn">&times; Retirer les filtres</button>
       </section>
       <section class="restaurantsSection">
         <h3>Restaurants disponibles : <span class="nbRestaurants"></span></h3>
