added a form used to add restaurants to the list

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <section class="formSection">
         <h2>Ajouter un restaurant</h2>
         <p>
-          Votre restaurant préféré n'est pas dans notre base de données?
-          Rajoutez le en remplissant ce formulaire:
+          Ton restaurant préféré n'est pas dans notre base de données? Ajoute le
+          en remplissant ce formulaire:
         </p>
-        <form action="post">
+        <form action="post" class="restaurantForm">
           <label for="restaurantName">Nom du restaurant :</label>
           <input
             type="text"
