added form and rearranged folders

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
         <button class="classButton">
           <img
             class="imagebutton"
-            src="img/icons8-menu-64.png"
+            src="assets/icons/icons8-menu-64.png"
             alt="bouton burger"
           />
         </button>
         <ul class="menu-burger" id="menu-burger">
-          <li><a href="#">Forum</a></li>
-          <li><a href="#">Connexion</a></li>
-          <li><a href="#">Votre compte</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#formSection">Ajouter un restaurant</a></li>
         </ul>
       </nav>
       <h1>Wild Eats</h1>
@@ -56,7 +55,7 @@
         <h3>Restaurants disponibles : <span class="nbRestaurants"></span></h3>
         <ul class="restaurantsContainer"></ul>
       </section>
-      <section class="formSection">
+      <section class="formSection" id="formSection">
         <h2>Ajouter un restaurant</h2>
         <p>
           Ton restaurant préféré n'est pas dans notre base de données? Ajoute le
@@ -159,7 +158,7 @@
             href="https://www.linkedin.com/school/wild-code-school/people/?originalSubdomain=fr"
             target="_blank"
           >
-            <img src="img/linkedin-3000959_640.png" alt="LinkedIn" />
+            <img src="assets/icons/linkedin-3000959_640.png" alt="LinkedIn" />
           </a>
         </li>
         <li>
@@ -167,7 +166,7 @@
             href="https://www.facebook.com/photo/?fbid=732115145586528&set=a.732115132253196&locale=fr_FR"
             target="_blank"
           >
-            <img src="img/facebook-3000954_640.png" alt="Facebook" />
+            <img src="assets/icons/facebook-3000954_640.png" alt="Facebook" />
           </a>
         </li>
         <li>
@@ -175,13 +174,13 @@
             href="https://www.instagram.com/wildcodeschoolofficial/"
             target="_blank"
           >
-            <img src="img/instagram-1581266_640.jpg" alt="Instagram" />
+            <img src="assets/icons/instagram-1581266_640.jpg" alt="Instagram" />
           </a>
         </li>
       </ul>
       <p>Copyright 2025 - Wild Eats</p>
     </footer>
-    <script src="scripts/restaurants.js"></script>
+    <script src="data/restaurants.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
