init blog branch

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           />
         </button>
         <ul class="menu-burger" id="menu-burger">
-          <li><a href="#">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li><a href="#formSection">Ajouter un restaurant</a></li>
         </ul>
       </nav>
