added blog articles to DB and few optimisations

--- a/blog.html
+++ b/blog.html
@@ -61,8 +61,8 @@
       </ul>
       <p>Copyright 2025 - Wild Eats</p>
     </footer>
-    <script src="data/restaurants.js"></script>
     <script src="data/blogArticles.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/burgerBtn.js"></script>
+    <script src="scripts/blog.js"></script>
   </body>
 </html>
