--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       <p>Copyright 2025 - Wild Eats</p>
     </footer>
     <script src="data/restaurants.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/burgerBtn.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
