added id to articles in DB

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Wild Eats</title>
@@ -31,6 +38,26 @@
       <h1>Wild Eats</h1>
     </header>
     <main class="container">
+      <section class="blogIntro">
+        <h2>Le blog Wild Eats</h2>
+        <p>
+          Tu cherches de bonnes adresses pour déjeuner ou dîner autour du campus
+          de la Wild Code School à Lille ? <br /><br />
+          Tu es au bon endroit ! Wild Eats recense les meilleurs restaurants du
+          quartier, qu’ils soient parfaits pour une pause rapide entre deux
+          cours, un repas convivial entre amis ou une découverte culinaire plus
+          raffinée. <br /><br />
+          Retrouve ici des articles sur nos coups de cœur gastronomiques, des
+          recommandations et des avis détaillés pour t'aider à faire ton choix.
+          Que tu sois amateur de cuisine traditionnelle, de saveurs exotiques ou
+          de street food gourmande, il y en a pour tous les goûts ! Bonne
+          lecture et bon appétit !
+        </p>
+      </section>
+      <section class="articlesSection">
+        <h3>Derniers articles</h3>
+        <ul class="articlesContainer"></ul>
+      </section>
     </main>
     <footer class="footerClass">
       <ul>
