--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       <section class="filterSection">
         <h2>Où vas-tu manger ce midi?</h2>
         <p>
-          Notre site web répertorie les restaurants que tu pourras retrouver
-          autours du campus chaque midi!
+          Tu cherches de bonnes adresses pour déjeuner ou dîner autour du campus de la Wild Code School à Lille ? Tu es au bon endroit ! 
+          Wild Eats recense les meilleurs restaurants du quartier, qu’ils soient parfaits pour une pause rapide entre deux cours, un repas 
+          convivial entre amis ou une découverte culinaire plus raffinée.
         </p>
         <ul class="filterList">
           <li>
