--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
 
         <div class="input-control">
           <label for="search">
-            <img src="/assets/icons/Icon loupe.png" alt="loupe" />
+            <img src="./assets/icons/Icon loupe.png" alt="loupe" />
           </label>
           <input
             type="text"
@@ -99,7 +99,24 @@
           </a>
         </li>
       </ul>
-      <p>Copyright 2025 - Wild Eats</p>
+      <p class="copyright">Copyright 2025 - Wild Eats</p>
+      <div class="githubLinks">
+        <p>Site développé par :</p>
+        <ul>
+          <li>
+            Adrien &nbsp;<a
+              href="https://github.com/MeertAdrien"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            Jordan &nbsp;<a href="https://github.com/Jordan-182" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
     </footer>
     <script src="data/blogArticles.js"></script>
     <script src="scripts/burgerBtn.js"></script>
