--- a/index.html
+++ b/index.html
@@ -189,7 +189,24 @@
           </a>
         </li>
       </ul>
-      <p>Copyright 2025 - Wild Eats</p>
+      <p class="copyright">Copyright 2025 - Wild Eats</p>
+      <div class="githubLinks">
+        <p>Site développé par :</p>
+        <ul>
+          <li>
+            Adrien &nbsp;<a
+              href="https://github.com/MeertAdrien"
+              target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+          <li>
+            Jordan &nbsp;<a href="https://github.com/Jordan-182" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
     </footer>
     <script src="data/restaurants.js"></script>
     <script src="scripts/burgerBtn.js"></script>
